secret-pod-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp-color
spec:
  containers:
  - name: simple-webapp-color
    image: simple-webapp-color
    ports:
    - containerPort: 8080
  volumes:
  - name: app-secret-volume
    secret: 
      name: app-secret

# Secrets in Pods as Volumes
# ls /opt/app-secret-volumes
# DB_Host	DB_Password		DB_User
# cat /opt/app-secret-volumes/DB_Password
# myPassWord


# For TLS Transport Layer Security (former SSL) CSR etc.
# $ kubectl -n webhook-demo create secret tls webhook-server-tls \
#     --cert "/root/keys/webhook-server-tls.crt" \
#     --key "/root/keys/webhook-server-tls.key"
